--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -231,6 +231,9 @@ he:
         identifier: מזהה
         port_index: מספר יציאה
         sensor_type: סוג חיישן
+        convert_ratio: יחס המרה
+        valf_id: מגוף
+        no_water_pulse_reaction_delay: זמן תגובה לחוסר מים (שניות)
       alarm:
          alarm_title: כותרת
          alarm_value: ערך
@@ -252,6 +255,8 @@ he:
       temperature: 'טמפרטורה'
       pressure: 'לחץ'
       humidity: 'לחות'
+      volume: 'נפח'
+      fert_meter: מד דישון
     plan_type:
       watering: השקייה
       fertilizing: דישון
